Corrected minor formating problems, moslty to avoid line overflows when converting the XHTML pages into PDF documents.
git-svn-id: http://svn.logtalk.org/logtalk/trunk@2855 ac9c905b-388a-4ddf-9b6a-4063a022bc57

--- a/manuals/print.css
+++ b/manuals/print.css
@@ -152,11 +152,12 @@ pre {
 	page-break-before: avoid;
 }
 
-ul, ol, dl {
+ul, ol {
 	display: compact;
 	page-break-before: avoid;
 }
 
 dl {
+	page-break-before: avoid;
 	padding-left: 2em;
 }
